--- a/cantina-app-ui/src/app/login/login.component.html
+++ b/cantina-app-ui/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div style="margin: auto" class="col-sm-10 col-md-10 col-lg-6 col-xl-4">
+<div style="margin: auto" class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
 <form [formGroup]="form">
   <fieldset>
       <legend>Login</legend>
@@ -12,8 +12,10 @@
       </div>
   </fieldset>
   <div class="form-buttons">
-      <button class="btn btn-primary" 
-              (click)="login()">Login</button>
+      <button class="btn btn-primary" (click)="login()">Login</button>
+  </div>
+  <div *ngIf="error===true" class="alert alert-danger mt-2 mb-2" role="alert">
+    {{errorMessage}}
   </div>
 </form>
 </div>
