--- a/cantina-app-ui/src/app/staff/staff.component.html
+++ b/cantina-app-ui/src/app/staff/staff.component.html
@@ -1,8 +1,8 @@
   <div class="content">
   <mat-tab-group class="d-flex justify-content-start">
-    <mat-tab  label="CRUD Operations">
+    <mat-tab  label="Food management">
     <div  class="d-flex justify-content-start">
-      <div class="border border-dark m-1 col-4">
+      <div class="border border-dark m-2 p-2 col-5">
         <mat-form-field>
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
@@ -38,7 +38,8 @@
         </mat-paginator>
       </div>
 
-      <div class="border border-dark m-1 col-3"  style="max-width: 200px; max-height: 300px;">
+      <div class="border border-dark m-2 p-2 col-3">
+        <div class="col-12 m-1">
           <form [formGroup]="updateForm">
               <fieldset>
             <mat-form-field class="col-12">
@@ -54,15 +55,35 @@
                 <input name="price" formControlName="price" matInput placeholder="Price">
           </mat-form-field>
           </fieldset>
-
-          <button [disabled]="!updateForm.valid" mat-raised-button color="primary" (click)="updateFood()">Update</button>
+         
+          <button class="m-1"  [disabled]="!updateForm.valid" mat-raised-button color="primary" (click)="updateFood()">Update</button>
           </form>
+        </div>
+        <hr>
+        <div class="col-12 m-1">
+            <form [formGroup]="createForm">
+                <fieldset>
+              <mat-form-field class="col-12">
+                  <input name="name" formControlName="name" matInput placeholder="Name">
+              </mat-form-field>
+              <mat-form-field class="col-12">
+                  <input name="weigth" formControlName="weigth" matInput placeholder="Weigth">
+              </mat-form-field>
+              <mat-form-field class="col-12">
+                  <input name="price" formControlName="price" matInput placeholder="Price">
+            </mat-form-field>
+            </fieldset>
+            </form>
+            <button class="m-1" [disabled]="!createForm.valid" mat-raised-button color="primary" (click)="createNewFood()">Create new</button>
+        </div>
+
+        
       </div>
 
     </div>
     </mat-tab>
 
-    <mat-tab label="Second"> 
+    <mat-tab label="Working days"> 
 
     </mat-tab>
 
