--- a/cantina-app-ui/src/app/register/register.component.html
+++ b/cantina-app-ui/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div style="margin: auto" class="col-sm-10 col-md-10 col-lg-6 col-xl-4">
   <form [formGroup]="form">
     <fieldset>
-        <legend>Login</legend>
+        <legend>Register</legend>
         <div class="form-group">
             <label>Email:</label>
             <input class="form-control" name="email" formControlName="email">
