--- a/cantina-app-ui/src/app/staff/staff.component.html
+++ b/cantina-app-ui/src/app/staff/staff.component.html
@@ -2,43 +2,8 @@
   <mat-tab-group class="d-flex justify-content-start">
     <mat-tab  label="Food management">
     <div  class="d-flex justify-content-start">
-      <div class="border border-dark m-2 p-2 col-5">
-        <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-        </mat-form-field>
-        <mat-table #table [dataSource]="dataSource" matSort>
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-          </ng-container>
-        
-          <!-- Weigth Column -->
-          <ng-container matColumnDef="weigth">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Weigth </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.weigth}} </mat-cell>
-          </ng-container>
 
-          <!-- Price Column -->
-          <ng-container matColumnDef="price">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
-          </ng-container>
-        
-        
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;" style="cursor: pointer;" (click)="getRecord(row)"></mat-row>
-        </mat-table>
-        <mat-paginator 
-        #paginator
-        [pageSize]="7"
-        [pageSizeOptions]="[5, 7, 10]"
-        [showFirstLastButtons]="true"
-        [pageIndex]="0">
-        </mat-paginator>
-      </div>
-
-      <div class="border border-dark m-2 p-2 col-3">
+      <div class="align-self-start border border-dark m-2 p-2 col-xl-3 col-lg-3 col-md-4">
         <div class="col-12 m-1">
           <form [formGroup]="updateForm">
               <fieldset>
@@ -75,9 +40,43 @@
             </fieldset>
             </form>
             <button class="m-1" [disabled]="!createForm.valid" mat-raised-button color="primary" (click)="createNewFood()">Create new</button>
-        </div>
+          </div>
+      </div>
 
+      <div class=" align-self-start border border-dark m-2 p-2 col-xl-6 col-lg-6 col-md-6">
+        <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+        <mat-table #table [dataSource]="dataSource" matSort>
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+          </ng-container>
         
+          <!-- Weigth Column -->
+          <ng-container matColumnDef="weigth">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Weigth </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.weigth}} </mat-cell>
+          </ng-container>
+
+          <!-- Price Column -->
+          <ng-container matColumnDef="price">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Price </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
+          </ng-container>
+        
+        
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;" style="cursor: pointer;" (click)="getRecord(row)"></mat-row>
+        </mat-table>
+        <mat-paginator 
+        #paginator
+        [pageSize]="7"
+        [pageSizeOptions]="[5, 7, 10]"
+        [showFirstLastButtons]="true"
+        [pageIndex]="0">
+        </mat-paginator>
       </div>
 
     </div>
@@ -85,18 +84,18 @@
 
     <mat-tab label="Working days">
       <div  class="d-flex justify-content-start">
-          <div class="border border-dark m-2 p-2 col-4">
+          <div class="align-self-start border border-dark m-2 p-2 col-xl-3 col-lg-3 col-md-4">
               <mat-form-field>
                   <input matInput (keyup)="applyFilter2($event.target.value)" placeholder="Filter">
               </mat-form-field>
               <mat-table #table [dataSource]="workingDayDataSource" matSort>
-                <!-- Name Column -->
+                <!-- Day Column -->
                 <ng-container matColumnDef="day">
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Day </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.day}} </mat-cell>
                 </ng-container>
               
-                <!-- Weigth Column -->
+                <!-- Active Column -->
                 <ng-container matColumnDef="visible">
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Active </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.visible}} </mat-cell>
@@ -114,14 +113,16 @@
               </mat-paginator>
             </div>
 
-            <div class="border border-dark m-2 p-2 col-4">
-                <mat-form-field class="example-full-width">
-                    <input [min]="minDate" [max]="maxDate" matInput [matDatepickerFilter]="dayFilter" [matDatepicker]="picker" placeholder="Choose a date">
+            <div class="align-self-start border border-dark m-2 p-2 col-xl-3 col-lg-3 col-md-4">
+                <mat-form-field>
+                    <input [min]="minDate" [max]="maxDate" matInput [matDatepickerFilter]="dayFilter" 
+                      [matDatepicker]="picker" placeholder="Choose a date" (dateInput)="calendarSelectionChange('input', $event)">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                   </mat-form-field>
+                  <br>
+                  <button mat-stroked-button color="primary" [disabled]="createNewWorkingDayDisabled" (click)="createNewWorkingDay()">Create new wd</button>
             </div>
-          <button (click)="debugg()">Debugg</button>
       </div>
     </mat-tab>
   
