--- a/cantina-app-ui/src/app/staff/staff.component.html
+++ b/cantina-app-ui/src/app/staff/staff.component.html
@@ -1,5 +1,5 @@
   <div class="content">
-  <mat-tab-group class="d-flex justify-content-start">
+  <mat-tab-group id ="myId" #myId [selectedIndex]="selectedTab" (selectedIndexChange)="this.selectedTab=$event" class="d-flex justify-content-start">
     <mat-tab  label="Food management">
     <div  class="d-flex justify-content-start">
 
@@ -7,16 +7,16 @@
         <div class="col-12 m-1">
           <form [formGroup]="updateForm">
               <fieldset>
-            <mat-form-field class="col-12">
+            <mat-form-field class="col-12 small-font-size">
                 <input name="id" formControlName="id" matInput placeholder="ID">
             </mat-form-field>
-            <mat-form-field class="col-12">
+            <mat-form-field class="col-12 small-font-size">
                 <input name="name" formControlName="name" matInput placeholder="Name">
             </mat-form-field>
-            <mat-form-field class="col-12">
+            <mat-form-field class="col-12 small-font-size">
                 <input name="weigth" formControlName="weigth" matInput placeholder="Weigth">
             </mat-form-field>
-            <mat-form-field class="col-12">
+            <mat-form-field class="col-12 small-font-size">
                 <input name="price" formControlName="price" matInput placeholder="Price">
           </mat-form-field>
           </fieldset>
@@ -28,13 +28,13 @@
         <div class="col-12 m-1">
             <form [formGroup]="createForm">
                 <fieldset>
-              <mat-form-field class="col-12">
+              <mat-form-field class="col-12 small-font-size">
                   <input name="name" formControlName="name" matInput placeholder="Name">
               </mat-form-field>
-              <mat-form-field class="col-12">
+              <mat-form-field class="col-12 small-font-size">
                   <input name="weigth" formControlName="weigth" matInput placeholder="Weigth">
               </mat-form-field>
-              <mat-form-field class="col-12">
+              <mat-form-field class="col-12 small-font-size">
                   <input name="price" formControlName="price" matInput placeholder="Price">
             </mat-form-field>
             </fieldset>
@@ -43,7 +43,7 @@
           </div>
       </div>
 
-      <div class=" align-self-start border border-dark m-2 p-2 col-xl-6 col-lg-6 col-md-6">
+      <div class="align-self-start border border-dark m-2 p-2 col-xl-6 col-lg-6 col-md-6">
         <mat-form-field>
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
@@ -102,7 +102,7 @@
                 </ng-container>
                  
                 <mat-header-row *matHeaderRowDef="displayedWorkingDaysColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedWorkingDaysColumns;"></mat-row>
+                <mat-row *matRowDef="let row; columns: displayedWorkingDaysColumns;" (click)="getDay(row)"></mat-row>
               </mat-table>
               <mat-paginator 
               #paginator2
