--- a/cantina-app-ui/src/app/user/user.component.html
+++ b/cantina-app-ui/src/app/user/user.component.html
@@ -1,3 +1,71 @@
-<p>
-  user works!
-</p>
+<div class="content">
+    <mat-tab-group [(selectedIndex)]="selectedTabIndex">
+        <mat-tab label="Home">
+            <div class="row p-2 m-2">                
+                    <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
+                        <p><b>{{fName}} {{lName}}</b></p>
+                    </div>
+                    <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
+                            <p><b>Current balance:{{balance}} RON</b></p>
+                        </div>
+                    <div class="col-11">
+                        <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
+                            <button class="m-1" mat-raised-button color="primary" (click)="onNewOrderPress()">Comanda noua</button>
+                        </div>
+                    </div> 
+                <div class="col-11" style="background-color:blue;">
+                    <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
+                            <p><b>Comenzi viiotare</b></p>
+                     </div>
+                </div> 
+                <div class="col-11" style="background-color:black;">
+                    <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
+                            <p><b>Comenzi trecut </b></p>
+                    </div>
+                </div>           
+            </div>
+        </mat-tab>
+
+        <mat-tab  label="New Order">
+            <div class="row p-2 m-2">
+                <div class="border border-dark m-1 p-1 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                    <mat-form-field>
+                        <input [min]="minDate" [max]="maxDate" matInput [matDatepickerFilter]="dayFilter"  disabled="true"
+                            [matDatepicker]="picker" placeholder="Choose a date" (dateInput)="calendarSelectionChange('input', $event)">
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker disabled="false" #picker></mat-datepicker>
+                    </mat-form-field>
+                    <br>
+                </div>
+                <div class="border border-dark m-1 p-2 col-xl-6 col-lg-6 col-md-8 col-sm-11">
+                        <mat-table #table [dataSource]="foodList">
+                        <!-- Name Column -->
+                        <ng-container matColumnDef="name">
+                            <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+                        </ng-container>
+                
+                        <!-- Weigth Column -->
+                        <ng-container matColumnDef="weigth">
+                            <mat-header-cell *matHeaderCellDef> Weigth </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.weigth}} </mat-cell>
+                        </ng-container>
+                
+                        <!-- Price Column -->
+                        <ng-container matColumnDef="price">
+                            <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.price}} </mat-cell>
+                        </ng-container>
+
+                        <mat-header-row *matHeaderRowDef="displayedFoodColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedFoodColumns;" style="cursor: pointer;" (click)="getRecord(row)"></mat-row>
+                        </mat-table>
+                </div>
+            </div>
+        </mat-tab>
+
+        <mat-tab  label="History">
+        </mat-tab>
+    </mat-tab-group>
+</div>
+
