--- a/cantina-app-ui/src/app/navigation/navigation.component.html
+++ b/cantina-app-ui/src/app/navigation/navigation.component.html
@@ -10,7 +10,8 @@
       <a class="nav-item nav-link" *ngIf="this.authService.isLoggedOut()" routerLink="/register" routerLinkActive="active">Register</a>
       <a class="nav-item nav-link" *ngIf="(this.authService.isLoggedIn() && this.authService.hasRole('ROLE_ADMIN'))" routerLink="/admin" routerLinkActive="active">Admin Panel</a>
       <a class="nav-item nav-link" *ngIf="(this.authService.isLoggedIn() && this.authService.hasRole('ROLE_STAFF'))" routerLink="/staff" routerLinkActive="active">Staff Panel</a>
-      <a class="nav-item nav-link" *ngIf="(this.authService.isLoggedIn() && this.authService.hasRole('ROLE_USER'))" routerLink="/user" routerLinkActive="active">User Panel</a>
+      <a class="nav-item nav-link" *ngIf="(this.authService.isLoggedIn() && this.authService.hasRole('ROLE_USER'))" routerLink="/user" routerLinkActive="active">Orders</a>
+      <a class="nav-item nav-link" *ngIf="(this.authService.isLoggedIn() && this.authService.hasRole('ROLE_USER'))" routerLink="/user/history" routerLinkActive="active">History</a>
       <button disabled="true" class="nav-item nav-link btn btn-dark" *ngIf="this.authService.isLoggedIn()">{{email}}</button>
       <button class="nav-item nav-link btn btn-dark" *ngIf="this.authService.isLoggedIn()" (click)="logout()">Log out</button>
     </div>
