--- a/cantina-app-ui/src/app/user/user.component.html
+++ b/cantina-app-ui/src/app/user/user.component.html
@@ -111,6 +111,9 @@
         <mat-tab disabled label="View Order">
             <div class="row p-2 m-2">
                 <div class="border border-dark m-1 p-2 col-xl-4 col-lg-4 col-md-4 col-sm-11">
+                    <h3 class="text-dark">
+                        {{viewOrderDate}}
+                    </h3>
                     <table class="table">
                         <tr>
                             <th>Name</th>
