--- a/cantina-app-ui/src/app/user/user.component.html
+++ b/cantina-app-ui/src/app/user/user.component.html
@@ -16,7 +16,7 @@
                 <div class="col-11 p-2 m-2">
                     <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
                         <div>
-                            <p><strong>Comenzi viiotare</strong></p>
+                            <p><strong>Upcoming orders</strong></p>
                         </div>
                         <ul class="list-group">
                             <li (click)="onFutureDayItemClick($event, item)"
